# CodeTest_Hw

./: .clang-format  .gitattributes  .gitignore  README.md
C_test/: 1.py  3.py
C_test/C++/: CMakeLists.txt
C_test/C++/src/: 1.cpp  2.cpp  3.cpp
C_test/python/: 2.py  3.py
OJ/src/: HJ17.cpp  HJ20.cpp  HJ24.cpp  HJ43.cpp
cpp/: CMakeLists.txt  Makefile  README.md
cpp/src/: 1_01_需要打开多少监视器.cpp  1_02_告警抑制.cpp  1_03_AI面板识别.cpp  1_04_报文回路.cpp  1_06_阿里巴巴找黄金宝箱I.cpp  A2_01_无向图染色.cpp  B1_05_矩阵稀松扫描.cpp  B1_07_阿里巴巴找黄金宝箱V.cpp  B1_08_模拟消息队列.cpp  B1_09_文件目录大小.cpp  B1_10_座位调整.cpp  C1_01_模拟目录管理功能.cpp
python/: C1_01_模拟目录管理功能.py
src/: 1_02_告警抑制.cpp
test/: CMakeLists.txt
test/src/: test.cpp  test.py
test/utils/: dbg.h
